# bazel-cgo-demo

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
buffer/: BUILD.bazel  fs2bs.go
cmd/demo/: BUILD.bazel  main.go
convert/: BUILD.bazel  opus2pcm.go
header/: BUILD.bazel  wavheader.go
testdata/: sample.opus
