load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["main.go"],
    importpath = "github.com/adamcavendish/bazel-cgo-demo/cmd/demo",
    visibility = ["//visibility:private"],
    deps = ["//convert"],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
